test-suite/typecheck/pass/match_option_exhaustive.first
import * "Prelude"
function f(o: Option<Int>) -> Int {
  return match o {
    Some(x) => x,
    None => 0
  };
}
