test-suite/typecheck/fail/match_arm_type_mismatch.first
import * "Prelude"
function f(opt: Option<Int>) -> Int {
  return match opt {
    Some(x) => x,
    None => "zero"
  };
}
